--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,3 +13,43 @@
     font-size: 1rem;
   }
 }
+
+@layer components {
+  .btn {
+    padding: 0.375rem 0.75rem;
+    text-align: center;
+    cursor: pointer;
+    user-select: none;
+    display: inline-block;
+    vertical-align: middle;
+    border: 1px solid transparent;
+    text-decoration: none;
+    border-radius: 0.375rem;
+    line-height: 1.5;
+    @apply text-base text-light transition-all;
+  }
+
+  .btn-primary {
+    @apply bg-primary;
+  }
+
+  .btn-primary:hover {
+    @apply bg-primary-dark;
+  }
+
+  .form-control {
+    padding: 0.375rem 0.75rem;
+    border-radius: 0.375rem;
+    border: 1px solid #dee2e6;
+    display: block;
+    font-size: 1rem;
+    line-height: 1.5;
+    font-weight: 400;
+    width: 100%;
+    @apply bg-light text-dark;
+  }
+  .form-control:focus {
+    @apply ring ring-primary;
+    border: 1px solid #000;
+  }
+}
